# llmfoo

./: .gitignore  LICENSE  README.md  pyproject.toml
src/llmfoo/: __init__.py  functions.py  pdf2md.py
tests/: test_bool.py  test_pdf2md.py  test_tool.py
