[tool.poetry]
name = "llmfoo"
version = "0.1.0"
description = ""
authors = ["Mikko Korpela <mikko@robocorp.com>"]
readme = "README.md"
packages = [{include = "llmfoo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.3.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
