[tool.poetry]
name = "llmfoo"
version = "0.2.0"
description = "Automatically make the OpenAI tool JSON Schema, parsing call and constructing the result to the chat model."
authors = ["Mikko Korpela <mikko@robocorp.com>"]
readme = "README.md"
packages = [{include = "llmfoo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.3.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
