[tool.poetry]
name = "llmfoo"
version = "0.5.0"
description = "Automatically make the OpenAI tool JSON Schema, parsing call and constructing the result to the chat model."
authors = ["Mikko Korpela <mikko@robocorp.com>"]
readme = "README.md"
packages = [{include = "llmfoo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.3.7"
pypdf = "^4.0.2"
camelot-py = "^0.11.0"
opencv-python-headless = "^4.9.0.80"
ghostscript = "^0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
